--- a/src/global/stylesheet/base/_forms.scss
+++ b/src/global/stylesheet/base/_forms.scss
@@ -12,23 +12,23 @@ form {
 label {
 	display: block;
 	font-weight: 500;
-	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+	font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 	font-variant-caps: all-small-caps;
 	// margin-bottom: $small-spacing * 0.5;
 }
 
-[type='checkbox'],
-[type='radio'] {
+[type="checkbox"],
+[type="radio"] {
 	display: inline;
 	font-family: initial;
 	margin-right: calc(var(--sm-spacing) * 0.5);
 }
 
-[type='file'] {
+[type="file"] {
 	margin-bottom: var(--sm-spacing);
 	width: 100%;
 }
-input:not([type='range']):not([type='checkbox']) {
+input:not([type="range"]):not([type="checkbox"]) {
 	appearance: none;
 	background: transparent;
 	border: none;
@@ -41,22 +41,22 @@ input:not([type='range']):not([type='checkbox']) {
 	font-size: 100% !important;
 	border-radius: var(--md-radius);
 }
-input[type='search']::-webkit-search-decoration,
-input[type='search']::-webkit-search-cancel-button,
-input[type='search']::-webkit-search-results-button,
-input[type='search']::-webkit-search-results-decoration {
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration {
 	display: none;
 }
 
 .input,
-input[type='search'] {
+input[type="search"] {
 	// background-color: #e3dbf598 !important;
 	min-width: 15ch;
 	max-width: 80ch;
 	height: auto;
 	min-height: 5ch;
 	max-height: 30ch;
-
+	will-change: contents;
 	transition: all cubic-bezier(0.47, 0, 0.745, 0.715) 0.1s;
 	&:active,
 	&:focus-within,
@@ -72,13 +72,13 @@ input[type='search'] {
 .input {
 	display: grid;
 	grid-template-columns: 1fr 31px;
-	grid-template-areas: 'start end';
+	grid-template-areas: "start end";
 	position: relative;
 	border: 0.0625rem solid hsla(0, 0%, 66.7%, 0.219);
 	border-radius: var(--md-radius);
-	box-shadow: inset 0.1125em -0.1125em 1em 0.5em hsla(0, 0%, 96.9%, 0.014),
-		0 0 0.25em 0.02em hsla(0, 0%, 66.7%, 0) !important;
+	box-shadow: inset 0.1125em -0.1125em 1em 0.5em hsla(0, 0%, 96.9%, 0.014), 0 0 0.25em 0.02em hsla(0, 0%, 66.7%, 0) !important;
 	transition: all 0.1s cubic-bezier(0.47, 0.25, 0.745, 0.715);
+	will-change: contents;
 	width: 100%;
 	height: auto;
 	min-height: 5ch;
@@ -91,7 +91,7 @@ input[type='search'] {
 		filter: brightness(1.15);
 	}
 }
-input :not([type='range']) :not([type='checkbox']) {
+input :not([type="range"]) :not([type="checkbox"]) {
 	border: 0.0625rem solid rgba(170, 170, 170, 0.219);
 	font-family: inherit;
 	width: auto;
