--- a/src/global/stylesheet/base/_layout.scss
+++ b/src/global/stylesheet/base/_layout.scss
@@ -1,3 +1,4 @@
+@use './mixins';
 html {
 	box-sizing: border-box;
 	scroll-behavior: smooth;
@@ -11,11 +12,10 @@ html {
 
 html,
 body {
-	// height: 100%;
 	line-height: 1.5;
 	position: fixed;
-	width: 100vw;
-	height: 100vh;
+	width: 100%;
+	height: 100%;
 	top: 0;
 	right: 0;
 	bottom: 0;
@@ -37,7 +37,7 @@ body {
 	/* ===== Scrollbar CSS ===== */
 
 	* {
-		scrollbar-gutter: 10px;
+		scrollbar-gutter: 0.833333rem;
 		scrollbar-width: thin;
 		scrollbar-color: #c7c7c7 #5e5e5e2f;
 	}
@@ -53,7 +53,7 @@ body {
 		height: 0.916667rem;
 		width: 100%;
 		background-clip: content-box;
-		border-radius: 10px;
+		border-radius: 0.833333rem;
 		border: transparent solid 0.0983333rem;
 	}
 
@@ -73,17 +73,12 @@ body {
 	-ms-user-select: none;
 	user-select: none;
 	-webkit-tap-highlight-color: transparent;
-	font-size: 75%;
-	@media screen and (min-width: 620px) and (max-width: 1440px) {
-		font-size: 100%;
-	}
-	@media screen and (min-width: 1441px) {
-		font-size: 110%;
-	}
+	// @include mixins.fluid-typography(12, 14, 320, 1440);
+	@include mixins.fluid-type(320px, 1400px, 12px, 14px);
 }
 :root .light {
 	* {
-		scrollbar-gutter: 10px;
+		scrollbar-gutter: 0.833333rem;
 		scrollbar-width: thin;
 		scrollbar-color: #c7c7c7 #5e5e5e2f;
 	}
@@ -99,7 +94,7 @@ body {
 		height: 0.916667rem;
 		width: 100%;
 		background-clip: content-box;
-		border-radius: 10px;
+		border-radius: 0.833333rem;
 		border: transparent solid 0.0983333rem;
 	}
 
@@ -136,7 +131,8 @@ main {
 	padding: 1rem;
 	position: relative;
 	overflow: visible;
-	@media only screen and (min-width: 640px) {
+	will-change: contents;
+	@media only screen and (min-width: 53.333333rem) {
 		padding: var(--base-spacing) var(--lg-spacing);
 	}
 }
@@ -145,6 +141,7 @@ main {
 	overflow: hidden;
 	overflow-y: scroll;
 	-webkit-overflow-scrolling: touch;
+	will-change: contents, scroll-position;
 	display: block;
 	touch-action: pan-y;
 	grid-area: m/m/m/m;
