--- a/src/global/stylesheet/base/_variables.scss
+++ b/src/global/stylesheet/base/_variables.scss
@@ -1,11 +1,11 @@
 // GLOBAL VARIABLES
 :root {
-	--base-spacing: 1rem;
-	--base-font-size: 75%;
-	--base-font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-		Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	--base-spacing: 12px;
+	--base-font-size: 12px;
+	--base-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+		"Helvetica Neue", sans-serif;
 
-	--secondary-font-family: 'Commissioner', sans-serif;
+	--secondary-font-family: "Commissioner", sans-serif;
 	--color-dark: #fefefefe;
 	--color-light: #111113;
 
