--- a/src/global/stylesheet/components/_carousel-item.scss
+++ b/src/global/stylesheet/components/_carousel-item.scss
@@ -1,5 +1,10 @@
 .subtitles {
-	display: flex;
+	display: inline-flex;
+	flex-wrap: wrap;
+	span,
+	a {
+		margin-right: 0.125em;
+	}
 }
 .text-wrapper {
 	display: inline-flex;
@@ -8,7 +13,7 @@
 .item1x1 {
 	// padding-top: 100% !important;
 	width: 100%;
-	max-width: 15rem !important;
+	max-width: 20rem !important;
 	position: relative;
 }
 .item16x9 {
@@ -18,6 +23,7 @@
 }
 .img1x1 {
 	// padding-top: 100% !important;
+	min-width: 13rem !important;
 	aspect-ratio: 1/1 !important;
 }
 .img16x9 {
@@ -26,12 +32,13 @@
 }
 .container.carouselItem {
 	position: relative;
+	will-change: contents;
 }
 .menu {
 	position: absolute;
 	pointer-events: painted;
 
-	right: 0;
+	right: 5%;
 	top: 0.25em;
 	padding-top: 0rem;
 	// padding-right: 0.0125rem;
@@ -87,6 +94,7 @@ section.item {
 		left: 0;
 		background: linear-gradient(rgba(0, 0, 0, 0.502), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0));
 		pointer-events: none;
+		will-change: contents;
 		transition: background cubic-bezier(0.455, 0.03, 0.515, 0.955) 0.1s,
 			opacity cubic-bezier(0.455, 0.03, 0.515, 0.955) 0.1s;
 		opacity: 0.1;
@@ -112,10 +120,6 @@ section.item {
 		object-fit: contain;
 		// border-radius: var(--xs-radius);
 		min-width: 100%;
-		top: 0;
-		right: 0;
-		bottom: 0;
-		left: 0;
 	}
 }
 
