--- a/src/global/stylesheet/modules/_heading.scss
+++ b/src/global/stylesheet/modules/_heading.scss
@@ -9,11 +9,26 @@
 	flex-wrap: wrap;
 	justify-content: flex-start;
 	align-items: baseline;
-	h1 {
+	h1,
+	h2 {
 		margin-right: 1.38rem;
 		margin-bottom: 0;
 	}
 	a {
 		margin: 0 0 1.38rem;
+	}
+	a small {
+		$color: rgb(175, 175, 175);
+		font-size: 0.95rem;
+		font-weight: 700;
+		font-variant-caps: all-petite-caps;
+		letter-spacing: 0.05rem;
+		transition: ease-in color 75ms;
+		color: $color;
+		&:hover {
+			color: lighten($color, 30%);
+			text-decoration: underline 0.001rem solid;
+			text-underline-offset: 0.001rem;
+		}
 	}
 }
