[FIX] api module now works correctly [UI] Fixed mobile font size [FEAT] Artist descriptions

--- a/src/global/stylesheet/base/_base.scss
+++ b/src/global/stylesheet/base/_base.scss
@@ -1,5 +1,6 @@
 @forward './reset';
 @forward './fonts';
+@forward './colors';
 @forward './variables';
 @forward './layout';
 @forward './typography';
