--- a/src/global/stylesheet/base/_layout.scss
+++ b/src/global/stylesheet/base/_layout.scss
@@ -1,4 +1,4 @@
-@use './mixins';
+@use "./mixins";
 html {
 	box-sizing: border-box;
 	scroll-behavior: smooth;
@@ -27,12 +27,13 @@ body {
 }
 
 :root {
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+	font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
 		"Helvetica Neue", sans-serif;
 	color: rgb(255, 255, 255);
 	word-wrap: break-word;
-
+	font-size: var(--base-font-size);
 	-webkit-text-size-adjust: 100%;
+	font-size: 0.75rem;
 
 	/* ===== Scrollbar CSS ===== */
 
@@ -74,7 +75,12 @@ body {
 	user-select: none;
 	-webkit-tap-highlight-color: transparent;
 	// @include mixins.fluid-typography(12, 14, 320, 1440);
-	@include mixins.fluid-type(320px, 1400px, 12px, 14px);
+	@media screen and (min-width: 40rem) and (max-width: 61rem) {
+		font-size: 0.875rem;
+	}
+	@media screen and (min-width: 61rem) {
+		font-size: 1rem;
+	}
 }
 :root .light {
 	* {
@@ -145,4 +151,17 @@ main {
 	display: block;
 	touch-action: pan-y;
 	grid-area: m/m/m/m;
+}
+
+.container {
+	// margin: 0 auto;
+	max-width: 112rem;
+	// padding: 0 2rem;
+	position: relative;
+	display: flex;
+	width: 100%;
+	flex-direction: column;
+	&.row {
+		flex-direction: row;
+	}
 }
