--- a/src/global/stylesheet/base/_typography.scss
+++ b/src/global/stylesheet/base/_typography.scss
@@ -13,7 +13,7 @@ h6,
 
 	line-height: 1.5;
 	font-weight: 500;
-	margin: 0 0 1.38rem;
+	margin: 0 0 1.138rem;
 }
 
 h1 {
@@ -44,7 +44,7 @@ h6 {
 }
 
 p {
-	// margin: 0 0 $small-spacing;
+	margin: 0 0 var(--sm-spacing);
 }
 
 a,
