--- a/src/global/stylesheet/base/_variables.scss
+++ b/src/global/stylesheet/base/_variables.scss
@@ -1,13 +1,14 @@
 // GLOBAL VARIABLES
 :root {
-	--base-spacing: 12px;
-	--base-font-size: 12px;
-	--base-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
-		"Helvetica Neue", sans-serif;
+	--base-spacing: 0.75rem;
+	--base-font-size: 0.75rem;
+	--base-font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
+		"Open Sans", "Helvetica Neue", sans-serif;
 
 	--secondary-font-family: "Commissioner", sans-serif;
 	--color-dark: #fefefefe;
 	--color-light: #111113;
+	--color-med: #202024;
 
 	// Spacing
 	--sm-spacing: calc(var(--base-spacing) / 2.5);
