--- a/src/global/stylesheet/components/_player.scss
+++ b/src/global/stylesheet/components/_player.scss
@@ -26,17 +26,47 @@
 }
 .player-btn {
 	-webkit-text-size-adjust: 100%;
-
 	align-self: center;
 	cursor: pointer;
 	display: inline-block;
 	height: auto;
-	margin-left: auto;
-	margin-right: auto;
-	max-height: 44pt;
+	max-height: 100%;
 	max-width: 44pt;
-	margin: 10pt;
+	margin: 0 2pt;
+	padding: 8pt;
+	position: relative;
 	width: auto;
+	isolation: isolate;
+
+	&::before {
+		position: absolute;
+		content: "";
+		z-index: -1;
+		top: 0;
+		right: 0;
+		bottom: 0;
+		left: 0;
+		height: 100%;
+		width: 100%;
+		border-radius: 50%;
+		opacity: 0;
+		transition: opacity, background linear 200ms;
+
+		background-position: center;
+		// transition: background 0.8s;
+	}
+	@media (hover: hover) {
+		&:hover::before {
+			// background: ;
+			background: #55555528 radial-gradient(circle, transparent 1%, #55555528 1%) center/15000%;
+			opacity: 1;
+		}
+	}
+	&:active::before {
+		background-size: 100%;
+		background-color: #7272723f;
+		transition: background 0s;
+	}
 }
 
 .controls {
