--- a/src/global/stylesheet/modules/_button.scss
+++ b/src/global/stylesheet/modules/_button.scss
@@ -2,17 +2,17 @@
 // All rules related to the .button module
 
 %button-base {
-	transition: background, 75ms;
-	// display: inline-block;
-	padding: 0.5rem 1rem;
-	color: #0e0e0e !important; // !important is added to colors in order to make button utility immutable.  Otherwise, it's common for `a` styles to override button specificity.
-	background-color: #fffffff2 !important;
-	border: 1px solid #121212 !important;
+	transition: background cubic-bezier(0.455, 0.03, 0.515, 0.955) 75ms;
+	display: inline-flex;
+	padding: 0.6rem 1.2rem;
+	color: #0e0e0e; //  is added to colors in order to make button utility immutable.  Otherwise, it's common for `a` styles to override button specificity.
+	background-color: #fffffff2;
+	border: 1px solid #121212;
 	border-radius: var(--base-radius);
-	font-family: "Commissioner", sans-serif !important;
+	font-family: "Commissioner", sans-serif;
 	cursor: pointer;
 	font-size: 1.2em;
-	font-weight: 500 !important;
+	font-weight: 500;
 	text-transform: none;
 	// text-align: center;
 	// vertical-align: middle;
@@ -31,7 +31,7 @@
 	&:hover,
 	&:active,
 	&.active {
-		color: #fff;
+		color: rgb(15, 15, 15);
 		background-color: darken(#f2f2f2f3, 10%) !important;
 		border-color: #202020 !important;
 		// box-shadow: 0 0 0.5rem 0.15rem rgba(0, 0, 0, 0.164) inset;
@@ -43,7 +43,59 @@
 
 // Button Types
 ////////////////////////////////
+button.small {
+	@extend %button-base;
+	max-width: fit-content;
+}
+button.has-icon {
+	display: inline-flex;
+	justify-items: center;
+	justify-content: center;
+	> .text {
+		margin-left: 0.125rem;
+	}
+}
 
+button.outlined {
+	font-weight: 700;
+	display: inline-flex;
+	min-width: 7rem;
+	align-items: center;
+
+	background-color: transparent !important;
+	border: white 0.1rem solid !important;
+	color: white !important;
+	// align-items: center;
+	/* flex-wrap: nowrap; */
+	/* place-items: center; */
+	display: inline-flex;
+	font-weight: 500;
+	margin-bottom: 0.8rem;
+
+	&:active,
+	&:hover {
+		border: rgb(158, 158, 158) 0.1rem solid !important;
+		background: rgba(255, 255, 255, 0.027) !important;
+		box-shadow: 0 0 0.1em 0 inset black;
+		color: rgb(236, 236, 236) !important;
+	}
+
+	.button-text {
+		margin-left: 0.2rem;
+		align-self: center;
+		padding-bottom: 0.1rem;
+	}
+	&:hover {
+		background-color: transparentize(#fff, 0.1) !important;
+		border-color: #caca !important;
+	}
+	&:active {
+		background-color: transparentize(#fff, 0.3) !important;
+		border-color: rgba(255, 255, 255, 0.667) !important;
+	}
+	// font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+	-webkit-font-smoothing: antialiased;
+}
 // Main Button
 .button {
 	@extend %button-base;
