--- a/src/global/stylesheet/base/_typography.scss
+++ b/src/global/stylesheet/base/_typography.scss
@@ -83,3 +83,30 @@ code,
 hr {
 	line-height: 1.25;
 }
+.secondary {
+	> * {
+		color: #f2f2f2c2;
+	}
+	color: #f2f2f2c2;
+}
+.explicit {
+	text-shadow: none;
+	/* max-height: 1rem; */
+	min-width: 1rem;
+	/* width: 1rem; */
+	font-size: xx-small;
+	vertical-align: baseline;
+	display: inline-flex;
+	height: 100%;
+	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Open Sans, Helvetica Neue,
+		sans-serif;
+	flex: none;
+	color: #000;
+	font-weight: 700;
+	filter: contrast(100%);
+	background: #ffffffbf;
+	padding: 0 0.25rem;
+	text-align: center;
+	border-radius: 0.2rem;
+	flex-wrap: nowrap;
+}
