--- a/src/global/stylesheet/modules/_heading.scss
+++ b/src/global/stylesheet/modules/_heading.scss
@@ -1,21 +1,23 @@
 .header {
-	display: flex;
-	/* grid-template-columns: 1fr auto; */
+	display: block;
 	font-weight: 600;
-	margin-bottom: 0.5rem;
+	margin-bottom: 1.5rem;
 	padding: 0.4rem 0.4rem 0.2rem;
-	/* white-space: pre; */
-	flex-direction: row;
-	flex-wrap: wrap;
+	/* flex-direction: row; */
 	justify-content: flex-start;
 	align-items: baseline;
+	/* white-space: pre; */
+	max-width: 100%;
 	h1,
 	h2 {
-		margin-right: 1.38rem;
+		margin-right: 0.728rem;
 		margin-bottom: 0;
+		white-space: pre;
+		display: inline-block;
 	}
 	a {
 		margin: 0 0 1.38rem;
+		display: inline-block;
 	}
 	a small {
 		$color: rgb(175, 175, 175);
