--- a/src/lib/shared/listPages.scss
+++ b/src/lib/shared/listPages.scss
@@ -1,3 +1,20 @@
+$width: 12rem;
+:root {
+	--width: #{$width};
+}
+@media screen and (min-width: 640px) and (max-width: 959px) {
+	$width: 18.2857rem;
+	:root {
+		--width: #{$width};
+	}
+}
+@media screen and (min-width: 960px) {
+	$width: 21.2857rem;
+	:root {
+		--width: #{$width};
+	}
+}
+
 .m-alert-danger {
 	h6 {
 		margin: 0;
@@ -6,69 +23,61 @@
 .item {
 	cursor: pointer;
 }
-button {
-	font-family: inherit;
-	display: inline-flex;
-	font-weight: 500;
-}
-.explicit {
-	text-shadow: none;
-	width: 1rem;
-	height: 1rem;
-	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Open Sans, Helvetica Neue,
-		sans-serif;
-	font-size: 0.7143rem;
-	flex: none;
-	color: #000;
-	font-weight: 700;
-	filter: contrast(100%);
-	background: hsla(0, 0%, 100%, 0.966);
-	padding: 0 0.4em;
-	display: inline-block;
-	margin-left: 0.5rem;
-	outline: #000 solid 0.1px;
-	margin-bottom: 0.7rem;
-	align-self: flex-end;
-}
+
 .button-group {
 	display: inline-flex;
 	flex-wrap: wrap;
 	flex: 0 1 auto;
 	gap: 0.5rem;
+	margin-top: 0.8rem;
 	align-items: center;
+	grid-area: buttons;
 }
 .subtitle {
 	margin: 0 0 0.25em 0;
+	line-height: 1.2;
 	&.description {
 		margin: 0.25em 0 0.5em 0;
+		font-size: 1.2em;
 	}
 	@media screen and (max-width: 500px) {
 		// font-size: 1.5rem;
 		margin: 0 0 0em 0;
 	}
 }
+.metadata {
+	grid-area: metadata;
+	align-self: center;
+	@media screen and (min-width: 640px) {
+		align-self: flex-end;
+	}
+}
+.info-title {
+	display: flex;
+}
 .box-title {
-	font-weight: bold;
-	font-size: 2.1em;
+	font-weight: 700;
+	font-size: 2em;
 	letter-spacing: -0.01rem;
+	font-family: "Commissioner", sans-serif;
+
 	text-overflow: ellipsis;
-	/* width: 100%; */
-	/* max-width: 90px; */
-	margin-right: 1.8rem;
-	line-break: strict;
 	display: inline;
 	max-width: 90%;
 	line-break: strict;
-	margin: 0 0 0.5rem;
-	@media screen and (max-width: 640px) {
-		font-size: 1.75em;
+	margin: 0 0 0.2rem;
+	@media screen and (min-width: 640px) {
+		font-size: 2.85rem;
 	}
-	@media screen and (max-width: 876px) {
-		font-size: 2em;
-	}
-	@media screen and (max-width: 500px) {
-		font-size: 1.5rem;
-	}
+	// @media screen and (max-width: 640px) {
+	// 	font-size: 1.75em;
+	// }
+	// @media screen and (max-width: 876px) {
+	// 	font-size: 2em;
+	// }
+	// @media screen and (max-width: 500px) {
+	// 	font-size: 1.5rem;
+	// }
 }
 small {
 	display: inline;
@@ -80,21 +89,29 @@ small {
 	-ms-user-select: none;
 	-webkit-user-select: none;
 	// border-color:
-	align-content: center;
 	will-change: contents, width;
 	background-color: rgb(170 170 170 / 10%);
 	border-color: #1b1b1b;
 	border-radius: 0.8em;
 	border-width: 1px;
-	display: flex;
-	flex-direction: row;
-	flex-wrap: nowrap;
-	flex: 1 1 auto;
 	margin: 1em;
+	display: grid;
+	grid-template-columns: var(--width) 1fr;
+	grid-gap: 0.5rem 1.25rem;
+	grid-template-areas:
+		"img metadata"
+		"img metadata"
+		"buttons buttons";
 	padding: 0.8em;
 	transition: all 0.23s cubic-bezier(0.39, 0.575, 0.565, 1);
 	user-select: none;
 	width: auto;
+	@media screen and (min-width: 640px) {
+		grid-template-areas:
+			"img metadata"
+			"img buttons";
+		grid-gap: 2rem 2rem;
+	}
 }
 hr {
 	border-color: rgba(170, 170, 170, 0.062);
@@ -105,9 +122,7 @@ hr {
 	margin-bottom: 0.1em;
 }
 .img {
-	max-width: 12rem;
-	max-height: 12rem;
-	min-width: 12rem;
+	grid-area: img;
 	position: relative;
 	aspect-ratio: 1/1;
 	height: auto;
@@ -137,8 +152,7 @@ hr {
 .info-wrapper {
 }
 .info-title {
-	display: flex;
-	flex-direction: column;
+	display: inline-block;
 	width: 100%;
 }
 .info {
@@ -156,6 +170,32 @@ hr {
 	}
 	/* float: revert;*/
 }
+.img {
+	position: relative;
+	aspect-ratio: 1/1;
+
+	object-fit: contain;
+	will-change: contents, width;
+
+	img {
+		/* max-width: inherit; */
+		/* max-height: inherit; */
+		// max-width: $width;
+		// max-height: var(--width);
+		object-fit: cover;
+		aspect-ratio: inherit;
+		height: 100%;
+		width: 100%;
+	}
+
+	@media screen and (min-width: 640px) {
+		$width: 18.2857rem;
+	}
+	@media screen and (min-width: 960px) {
+		$width: 21.2857rem;
+	}
+}
+
 .info-box {
 	display: flex;
 	flex-direction: column;
@@ -170,6 +210,7 @@ hr {
 }
 .subtitle-group {
 	margin-bottom: 1rem;
+	font-size: 1.15em;
 }
 @media screen and (min-width: 720px) and (max-width: 896px) {
 	.img {
@@ -213,25 +254,4 @@ li,
 	// transition: all 0.23s cubic-bezier(0.39, 0.575, 0.565, 1);
 	// /* display: flex; */
 	/* flex-wrap: wrap; */
-}
-.img {
-	position: relative;
-	aspect-ratio: 1/1;
-
-	object-fit: contain;
-	max-width: 18.2857rem;
-	max-height: 18.2857rem;
-	min-width: 18.2856rem;
-	will-change: contents, width;
-
-	img {
-		/* max-width: inherit; */
-		/* max-height: inherit; */
-		max-width: 18.2857rem;
-		max-height: 18.2857rem;
-		object-fit: cover;
-		aspect-ratio: inherit;
-		height: 100%;
-		width: 100%;
-	}
 }
