[NEW] - Playlist page now works past 100 songs - Implementing custom playlists - Expanded IndexedDB [API] API Redesign - Convert to POST   - url is now 'api/api.json' - Rebuilding to be more modular

--- a/src/global/stylesheet/modules/_button.scss
+++ b/src/global/stylesheet/modules/_button.scss
@@ -23,7 +23,7 @@
 	-moz-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
-
+	max-height: 3rem;
 	// &:focus {
 	//     outline: thin dotted #333;
 	//     outline-offset: -2px;
