--- a/src/global/stylesheet/components/_carousel-item.scss
+++ b/src/global/stylesheet/components/_carousel-item.scss
@@ -41,7 +41,7 @@
 	right: 5%;
 	top: 0.25em;
 	padding-top: 0rem;
-	// padding-right: 0.0125rem;
+	padding-right: 0.0125rem;
 	z-index: 1;
 	padding: 0.5ch;
 }
