--- a/src/global/stylesheet/components/_header.scss
+++ b/src/global/stylesheet/components/_header.scss
@@ -14,7 +14,7 @@ nav.nav {
 	padding: 1rem;
 	grid-area: n/n/n/n;
 	@media screen and (min-width: 640px) {
-		grid-template-columns: 1rem auto;
+		grid-template-columns: auto 1fr;
 	}
 	.nav-item:not(:last-child) {
 		margin-right: 0.5rem;
@@ -32,10 +32,10 @@ nav.nav {
 		img {
 			margin: 0;
 			padding: 0;
-			width: auto;
-			height: auto;
-			max-width: 2.5em;
-			max-height: 2.5em;
+			width: 100%;
+			height: 100%;
+			max-width: 2.5rem;
+			max-height: 2.5rem;
 		}
 		cursor: pointer;
 	}
