--- a/src/global/stylesheet/base/_typography.scss
+++ b/src/global/stylesheet/base/_typography.scss
@@ -7,7 +7,12 @@ h3,
 h4,
 h5,
 h6,
+.h1,
 .h2,
+.h3,
+.h4,
+.h5,
+.h6,
 .subheading {
 	color: var(--color-dark);
 	font-family: "Commissioner", sans-serif;
@@ -17,35 +22,42 @@ h6,
 	margin: 0 0 1.138rem;
 }
 
-h1 {
+h1,
+.h1 {
 	font-size: 2.488rem;
 	font-weight: 700;
 	letter-spacing: -0.03rem;
 }
 
-h2 {
+h2,
+.h2 {
 	font-size: 2.074rem;
 	font-weight: 700;
 }
 
-h3 {
+h3,
+.h3 {
 	font-size: 1.728rem;
 }
 
-h4 {
+h4,
+.h4 {
 	font-size: 1.44rem;
 }
 
-h5 {
+h5,
+.h5 {
 	font-size: 1.2rem;
 }
 
-h6 {
+h6,
+.h6 {
 	font-size: 1em;
 }
 
 p {
 	margin: 0 0 var(--sm-spacing);
+	font-size: 1rem;
 }
 
 a,
