preview branch init

--- a/src/global/stylesheet/base/_layout.scss
+++ b/src/global/stylesheet/base/_layout.scss
@@ -24,6 +24,8 @@ html {
 // }
 html,
 body {
+	background-color: #09090a;
+	color: #fefefe;
 	line-height: 1.5;
 	position: fixed;
 	min-height: 100vh;
