--- a/src/lib/components/Popper/index.scss
+++ b/src/lib/components/Popper/index.scss
@@ -30,9 +30,22 @@
 	isolation: isolate;
 }
 hr {
-	width: clamp(25%, 35%, 80%);
-	color: hsl(0deg 0% 80%);
-	border-style: solid;
+	&::before {
+		position: absolute;
+		inset: 0;
+		content: "";
+		margin: 0 auto;
+		width: 35%;
+		color: hsl(0deg 0% 80%);
+		border: 1px hsl(0deg 0% 100%) inset;
+		border-color: hsl(0deg 0% 100%);
+		height: 0;
+		line-height: inherit;
+		z-index: 5;
+	}
+	border-color: hsl(0deg 0% 0% / 0%);
+	width: 90%;
+	position: relative;
 }
 .dd-button {
 	cursor: pointer;
