--- a/src/global/stylesheet/modules/_heading.scss
+++ b/src/global/stylesheet/modules/_heading.scss
@@ -2,7 +2,7 @@
 	display: block;
 	font-weight: 600;
 	margin-bottom: 1.5rem;
-	padding: 0.4rem 0.4rem 0.2rem 0;
+	// padding: 0.4rem 0.4rem 0.2rem 0;
 	/* flex-direction: row; */
 	justify-content: flex-start;
 	align-items: baseline;
