--- a/src/lib/components/Popper/index.scss
+++ b/src/lib/components/Popper/index.scss
@@ -37,13 +37,13 @@ hr {
 		margin: 0 auto;
 		width: 35%;
 		color: hsl(0deg 0% 80%);
-		border: 1px hsl(0deg 0% 100%) inset;
-		border-color: hsl(0deg 0% 100%);
-		height: 0;
+		background: hsl(0deg 0% 100%);
+		height: 0.0625rem;
+
 		line-height: inherit;
 		z-index: 5;
 	}
-	border-color: hsl(0deg 0% 0% / 0%);
+	border: none;
 	width: 90%;
 	position: relative;
 }
