Fixed a bug with search results

--- a/src/lib/components/Popper/index.scss
+++ b/src/lib/components/Popper/index.scss
@@ -33,7 +33,7 @@ hr {
 	&::before {
 		position: absolute;
 		inset: 0;
-		content: "";
+		content: '';
 		margin: 0 auto;
 		width: 35%;
 		color: hsl(0deg 0% 80%);
